# book-review-rank-predict

./: .gitignore  README.md  analysis.ipynb  index.html  pyproject.toml  report.html
docs/: 00-problem-and-goal.md  01-data-source.md  02-data-profile.md  03-method-plan.md  04-method-plan-v2.md  05-data-prep.md  06-conclusions.md
src/: build_notebook.py  collect.py  figs_extra.py  prepare.py
